# lftools-ng

./: .gitignore  .markdownlint.json  .markdownlint.json.license  .pre-commit-config.yaml  .yamllint  IMPLEMENTATION_STATUS.md  README.md  REFACTORING_SUMMARY.md  UNIFIED_CREDENTIAL_SYSTEM.md  pyproject.toml  test_refactoring.py  test_repositories.py  test_scm_access.py
.github/workflows/: build-test.yaml
docs/: REFACTORING_SUMMARY.md  filtering.md  github-discovery.md  onap-migration-quick-reference.md  onap-password-migration.md  onepassword-migration-field-types.md  ssh-gerrit-implementation.md  ssh-implementation-summary.md  unified-credential-management.md
resources/: projects.yaml  repositories.yaml  sample-projects.yaml  sample-servers.yaml  servers.yaml
src/lftools_ng/: __init__.py  cli.py
src/lftools_ng/commands/: __init__.py  jenkins.py  oran_migrate.py  projects.py  rebuild.py  repository_migrate.py
src/lftools_ng/core/: __init__.py  connectivity.py  credential_classifier.py  credential_manager.py  filtering_guidelines.py  filters.py  gerrit_ssh.py  github_discovery.py  inventory_parser.py  jenkins.py  jenkins_config.py  jenkins_provider.py  models.py  output.py  platform_providers.py  project_matcher.py  projects.py  repository_discovery.py  ssh_config_parser.py  tailscale_parser.py
src/lftools_ng/utils/: __init__.py  server_utils.py
test_config/: projects.yaml  repositories.yaml  servers.yaml
tests/: __init__.py  conftest.py  test_cli.py  test_cli_comprehensive.py  test_cli_env_vars.py  test_connectivity.py  test_jenkins_config.py  test_onepassword_migration_field_types.py  test_ssh_config_parser.py
tests/commands/: __init__.py  test_jenkins.py  test_projects.py
tests/core/: __init__.py  test_credential_manager.py  test_filtering_guidelines.py  test_filters.py  test_gerrit_ssh.py  test_init.py  test_inventory_parser.py  test_jenkins.py  test_output.py  test_platform_providers.py  test_project_matcher.py  test_projects.py  test_repository_discovery.py  test_server_initialization.py
tests/integration/: __init__.py  test_dummy_config.py  test_ssh_repository_discovery.py  test_universal_filtering.py
